[package]
name = "colorsquares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", features = ["png"] }
openssl = "0.10.57"
base64 = "0.21.4"
hmac = "0.12.1"
sha2 = "0.10.7"
hex-literal = "0.4.1"
encoding = "0.2"

[lib]
name = "colorsquares"
path = "src/lib.rs"

